apps/teste-do-dani/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teste-do-dani
  labels:
    kubernetes.io/metadata.name: teste-do-dani
    backstage.io/kubernetes-id: teste-do-dani
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
