apps/teste-do-dani/base/teste-do-dani-deploy.yaml
---
# create deployment for teste-do-dani
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: teste-do-dani
  namespace: teste-do-dani
  labels:
    app: teste-do-dani
    version: 0.0.1
    backstage.io/kubernetes-id: teste-do-dani
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teste-do-dani
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: teste-do-dani
        version: 0.0.1
        backstage.io/kubernetes-id: teste-do-dani
    spec:
      containers:
      - name: teste-do-dani
        image: diegoluisi/teste-do-dani:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
