apps/teste-do-dani/base/teste-do-dani-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teste-do-dani-svc
  namespace: teste-do-dani
  annotations:
    external-dns.alpha.kubernetes.io/hostname: teste-do-dani.diegoluisi.eti.br
  labels:
    app: teste-do-dani
    version: 0.0.1
    backstage.io/kubernetes-id: teste-do-dani
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: teste-do-dani
