apps/teste-do-dani/base/teste-do-dani-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste-do-dani-vs
  namespace: teste-do-dani
  labels:
    app: teste-do-dani
    version: 0.0.1
    backstage.io/kubernetes-id: teste-do-dani
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - teste-do-dani.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: teste-do-dani-svc
      weight: 100
